[package]
name = "uclient"
version = "0.1.2"
authors = [ "Guoli Lyu <guoli-lv@hotmail.com>" ]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Universal HTTP client for Rust"
repository = "https://github.com/fMeow/uclient"
documentation = "https://docs.rs/uclient"
keywords = [ "HTTP", "client", "universal", "web" ]
exclude = [ ".gitignore", ".github", "tests/**/*" ]

[features]
default = [ ]
blocking = [ "maybe-async/is_sync" ]
async_reqwest = [ "reqwest/default-tls" ]
async_reqwest_rustls = [ "reqwest/rustls-tls" ]
blocking_reqwest = [ "reqwest/blocking", "reqwest/default-tls", "blocking" ]
blocking_reqwest_rustls = [ "reqwest/blocking", "reqwest/rustls-tls", "blocking" ]
async_surf = [ "surf/default" ]
async_surf_rustls = [
  "surf/h1-client-rustls",
  "surf/middleware-logger",
  "surf/encoding"
]

[dependencies]
url = "2"
http = "0.2"
maybe-async = "0.2"
async-trait = "0.1"
thiserror = "1"

  [dependencies.reqwest]
  version = "0.11"
  default-features = false
  features = [ "gzip" ]
  optional = true

  [dependencies.surf]
  version = "2.1.0"
  optional = true

[dev-dependencies]
env_logger = "0.8"
pretty_assertions = "0.7"

  [dev-dependencies.tokio]
  version = "1.1"
  features = [ "macros", "rt-multi-thread" ]

  [dev-dependencies.async-std]
  version = "1"
  features = [ "attributes" ]
